--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>小农社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -22,13 +22,15 @@
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="搜索问题、话题">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <!--这里是获取GitHub用户授权，所用的链接和参数都是指定的-->
-                <li><a href="https://github.com/login/oauth/authorize?client_id=Iv1.e5aafb631d90c609&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登陆</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">我<span class="caret"></span></a>
+                <li th:if="${session.user == null}">
+                    <a href="https://github.com/login/oauth/authorize?client_id=Iv1.e5aafb631d90c609&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登陆</a>
+                </li>
+                <li class="dropdown" th:if="${session.user != null}">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
