--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -21,7 +21,8 @@
                 浏览数：<span th:text="${question.viewCount}"></span>
             </span>
             <hr>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                 th:text="${question.description}">
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
