--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -15,6 +15,9 @@ body{
     width: 50px;
     height: 50px;
 }
+.media-body{
+    padding-top: 18px;
+}
 .text-desc{
     font-size: 12px;
     font-weight: normal;
@@ -32,4 +35,11 @@ body{
 }
 .jumbotron{
     margin: 50px;
+}
+.comment{
+    margin: 10px 0 10px 0;
+}
+.btn-comment{
+    float: right;
+    margin-bottom: 20px;
 }
