--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -15,8 +15,9 @@
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <!--正文-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4><span th:text="${question.title}"></span></h4>
+                <h3><span th:text="${question.title}"></span></h3>
                 <span class="text-desc">
                 作者：<span th:text="${question.user.name}"></span>&nbsp;/
                 发布时间：<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>&nbsp;/
@@ -33,7 +34,37 @@
                     编辑
                 </a>
             </div>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <!--回复-->
+            <h4>
+                <span th:text="${question.commentCount}"></span>个回复
+            </h4>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded"
+                                 th:src="${question.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h5 class="media-heading">
+                            <span th:text="${question.user.name}"></span>
+                        </h5>
+                        <div>
+                            我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容我是回复内容
+                        </div>
+                        <div class="menu1">
+                            <div class="glyphicon glyphicon-thumbs-up icon"></div>
+                            <div class="glyphicon glyphicon-comment icon"></div>
+                            <span class="pull-right" th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd')}"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <!--回复输入框-->
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
                 <div class="media">
