--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,12 +22,12 @@
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main">
     <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 y-line">
 
             <h2><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>&nbsp;发现</h2>
             <hr>
 
-            <div class="media" th:each="question:${pagination.questions}">
+            <div class="media" th:each="question:${pagination.data}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-rounded"
