--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -23,6 +23,10 @@
                     <li th:if="${session.user != null}">
                         <a href="/publish">发起话题</a>
                     </li>
+                    <li>
+                        <a href="/profile/replies">通知 <span class="badge" th:text="${session.unreadCount}"></span>
+                        </a>
+                    </li>
                     <!--这里是获取GitHub用户授权，所用的链接和参数都是指定的-->
                     <li th:if="${session.user == null}">
                         <a href="https://github.com/login/oauth/authorize?client_id=Iv1.e5aafb631d90c609&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登陆</a>
