--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="/css/community.css">
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main">
         <div class="row">
-            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 y-line">
 
                 <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;发起</h2>
                 <hr>
@@ -21,7 +22,9 @@
                     <input type="hidden" name="id" th:value="${id}">
                     <div class="form-group">
                         <label for="title">问题标题（简单扼要）:</label>
-                        <input type="text" class="form-control" th:value="${title}" id="title" name="title" placeholder="问题标题...">
+                        <input type="text" class="form-control" th:value="${title}" id="title" name="title"
+                               autocomplete="off"
+                               placeholder="问题标题...">
                     </div>
                     <div class="form-group">
                         <label for="description">问题补充（请参照右侧提示）:</label>
@@ -29,7 +32,39 @@
                     </div>
                     <div class="form-group">
                         <label for="tag">添加标签:</label>
-                        <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="添加标签，用逗号分隔">
+                        <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag"
+                               autocomplete="off"
+                               placeholder="添加标签，用逗号分隔"
+                               onclick="showSelectTag()">
+
+                        <div id="select-tag" class="publish-tag-tab">
+                            <!-- 表头 -->
+                            <ul class="nav nav-tabs" role="tablist">
+                                <li role="presentation" th:each="selectCategory,selectCategoryStat:${tags}" th:class="${selectCategoryStat.first?'active':''}">
+                                    <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab"
+                                       data-toggle="tab" th:text="${selectCategory.categoryName}">
+                                    </a>
+                                </li>
+                            </ul>
+
+                            <!-- 选项 -->
+                            <div class="tab-content">
+                                <div role="tabpanel" th:id="${selectCategory.categoryName}"
+                                     th:each="selectCategory:${tags}"
+                                     th:class="${selectCategoryStat.first?'active tab-pane':'tab-pane'}">
+                                    <span>
+                                        <span class="label label-info question-tag"  th:each="selectTag:${selectCategory.tags}" style="white-space: normal">
+                                            <span class="glyphicon glyphicon-tag" onclick="selectTag(this)"
+                                                  th:data-tag="${selectTag}"
+                                                  th:text="${' '+selectTag}">
+                                            </span>
+                                        </span>
+                                    </span>
+                                </div>
+                            </div>
+
+                        </div>
+
                     </div>
 
                     <div class="container-fluid main">
