--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -17,7 +17,7 @@
     <div class="row">
 
         <!--左边主要内容-->
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 y-line">
             <!--正文-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h3 class="question-title"><span th:text="${question.title}"></span></h3>
@@ -26,17 +26,30 @@
                 发布时间：<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>&nbsp;/
                 浏览数：<span th:text="${question.viewCount}"></span>
             </span>
+                <!--内容-->
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
                      th:text="${question.description}">
                 </div>
+
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <!--标签-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                     <span class="label label-info question-tag" th:each="tag:${question.tag.split(',')}">
+                         <span class="glyphicon glyphicon-tag"></span>
+                         <span class="label label-info" th:text="${tag}">Info</span>
+                     </span>
+                </div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
-                   th:if="${session.user!=null && session.user.id==question.creator}">
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-                    编辑
-                </a>
+                <!--编辑-->
+                <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
+                    <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                       th:if="${session.user!=null && session.user.id==question.creator}">
+                        <span class="glyphicon glyphicon-edit" aria-hidden="true">编辑</span>
+                    </a>
+                </div>
+
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -62,7 +75,7 @@
                             <div class="menu1">
                                 <span class="glyphicon glyphicon-thumbs-up icon"></span>
                                 <span th:data-id="${comment.id}"
-                                         onclick="collapseComments(this)" class="comment-icon">
+                                      onclick="collapseComments(this)" class="comment-icon">
                                     <span class="glyphicon glyphicon-comment"></span>
                                     <span th:text="${comment.commentCount}"></span>
                                 </span>
@@ -95,8 +108,11 @@
                                 -->
 
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments">
-                                    <input type="text" class="form-control" placeholder="评论一下……" th:id="${'input-'+comment.id}">
-                                    <button type="button" class="btn btn-success pull-right" onclick="comment(this)" th:data-id="${comment.id}">评论</button>
+                                    <input type="text" class="form-control" placeholder="评论一下……"
+                                           th:id="${'input-'+comment.id}">
+                                    <button type="button" class="btn btn-success pull-right" onclick="comment(this)"
+                                            th:data-id="${comment.id}">评论
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -150,8 +166,21 @@
                 </div>
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>相关问题</h4>
+                <ul class="question-related">
+                    <li th:each="related:${relatedQuestions}">
+                        <a th:href="@{'/question/'+${related.id}}" th:text="${related.title}"></a>
+                    </li>
+                </ul>
+            </div>
+
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <!--自定义区-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>站长微信</h4>
+                <img src="/img/wechat.jpg" width="50%"/>
             </div>
         </div>
     </div>
