--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -43,6 +43,9 @@
                                 delay  : 0,
                                 watch  : false,
                                 placeholder : "问题描述……",
+                                imageUpload : true,
+                                imageFormats : ["jpg","jpeg","gif","png","bmp","webp"],
+                                imageUploadURL : "/file/upload",
                             });
                         });
                     </script>
