--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,5 +16,6 @@
     <p th:text="${message}">服务器拥挤，请稍后再试!</p>
     <p><a class="btn btn-primary btn-lg" href="/" role="button">回到主页面</a></p>
 </div>
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
